# toy-lisp.hs

./: .gitignore  CHANGELOG.md  README.md  flake.nix  package.yaml  stack.yaml  toy-lisp.cabal
.github/workflows/: ci.yaml
app/: Main.hs  prelude.lisp
example/fibonacci/: description.md  recursive.lisp  z-combinator.lisp
example/fizzbazz/: description.md  main.lisp
example/hello-world/: description.md  main.lisp
src/: Lib.hs  ToyLisp.hs
src/ToyLisp/: Analyzer.hs  Evaluator.hs  Parser.hs  Runtime.hs  Syntax.hs  Util.hs
test/: AnalyzerSpec.hs  EvaluatorSpec.hs  ParserSpec.hs
