cabal-version:   3.0
name:            toy-lisp
version:         0.1.0.0
description:
  Please see [README](https://github.com/ryota2357/toy-lisp.hs/blob/master/README.md)

license:         MIT
license-file:    LICENSE
author:          ryota2357
build-type:      Simple
extra-doc-files: README.md

common common-options
  ghc-options:      -Wall -Wcompat
  default-language: GHC2021

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    ToyLisp
    ToyLisp.Parser
    ToyLisp.Syntax

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:
    , base  ^>=4.18.2.1
    , mtl   ^>=2.3.1

executable toy-lisp
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:
    , base      ^>=4.18.2.1
    , toy-lisp

test-suite toy-lisp-test
  import:         common-options
  hs-source-dirs: test
  main-is:        Main.hs
  type:           exitcode-stdio-1.0

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  build-depends:
    , base      ^>=4.18.2.1
    , toy-lisp
